kubernetes/apps/immich-lightroom/immich-ml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: immich-lightroom
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:release
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 6Gi
              cpu: "4"
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-ml-pvc
