kubernetes/apps/immich-lightroom/immich-ml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: immich-lightroom
spec:
  selector:
    app: immich-ml
  ports:
    - port: 3003
      targetPort: 3003
