kubernetes/apps/immich-lightroom/immich-ml/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-ml
  namespace: immich-lightroom
spec:
  podSelector:
    matchLabels:
      app: immich-ml
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 3003
      from:
        - podSelector:
            matchLabels:
              app: immich-server
